--- a/PlaceToUkrain/templates/base.html
+++ b/PlaceToUkrain/templates/base.html
@@ -19,6 +19,9 @@
                 </li>
                 {% if request.session.user %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'index' %}">Index</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Deconnexion</a>
                     </li>
                 {% else %}
