--- a/PlaceToUkrain/templates/homepage.html
+++ b/PlaceToUkrain/templates/homepage.html
@@ -4,11 +4,16 @@
 
 {% block content %}
   <div class="text-center">
-    <h1>Welcome to Ukrain</h1>
-    <p>Give Ukrainians a place to live</p>
+    <h1>Place to Ukrain</h1>
+    <p>Pour trouver ne laisser personne dehors</p>
     <div class="mt-4">
-      <a href="{% url 'login' %}" class="btn btn-primary">Login</a>
-      <a href="{% url 'register' %}" class="btn btn-success ml-2">Register</a>
+      {% if not request.session.user %}
+        <a href="{% url 'login' %}" class="btn btn-primary">Se connecter</a>
+        <a href="{% url 'register' %}" class="btn btn-success ml-2">S'enregistrer</a>
+      {% else %}
+        <a href="{% url 'index' %}" class="btn btn-primary">Index</a>
+        <a href="{% url 'logout' %}" class="btn btn-danger ml-2">Deconnexion</a>
+      {% endif %}
     </div>
   </div>
 {% endblock %}
