--- a/PlaceToUkrain/templates/search.html
+++ b/PlaceToUkrain/templates/search.html
@@ -5,18 +5,19 @@
 {% load filter %}
 
 {% block content %}
-  <div class="container">
-    <h1 class="text-center">House Search</h1>
-    <div class="row">
-      <div class="col-md-5">
+
+<h1 class="text-center">House Search</h1>
+  <div class="container"  style="display: flex; flex-direction: row">
+      <div style="margin-right: 4rem;">
         <h2>Filtre</h2>
         <form method="post">
           {% csrf_token %}
-          {{ form.as_table }}
+          <div class="form-table" style="display: flex;flex-direction: column;">
+            {{ form.as_table }}
+          </div>
           <button type="submit" class="btn btn-primary mt-3">Search</button>
         </form>
       </div>
-    </div>
 
       <div class="col-md-12 row">
           <h2 class="mt-4">Résultats</h2>
@@ -38,6 +39,11 @@
                   <tr>
                     <form method="post" action="{% url 'rent_house' house.0.id %}">
                       {% csrf_token %}
+                      {% if period %}
+                        <input type="hidden" name="house_period" value="{{ period }}">
+                      {% else %}
+                        <input type="hidden" name="house_period" value="{{ house.1 }}">
+                      {% endif %}
                       <td>{{ house.0.country }}</td>
                       <td>{{ house.0.city }}</td>
                       <td>{{ house.0.get_price_type_display }}</td>
@@ -67,6 +73,7 @@
                   <tr>
                     <form method="post" action="{% url 'rent_house' house.0.id %}">
                       {% csrf_token %}
+                      <input type="hidden" name="house_period" value="{{ house.1 }}">
                       <td>{{ house.0.country }}</td>
                       <td>{{ house.0.city }}</td>
                       <td>{{ house.0.get_price_type_display }}</td>
