--- a/PlaceToUkrain/templates/search.html
+++ b/PlaceToUkrain/templates/search.html
@@ -89,7 +89,7 @@
                       {% endif %}
                       <td>{{ house.0.people }}</td>
                       <td>
-                        {{ house.1|datetime_list_to_str }}
+                        {{ house.1 }}
                       </td>
                       <td>
                         <button type="submit" class="btn btn-success">Reserve</button>
