--- a/PlaceToUkrain/templates/search.html
+++ b/PlaceToUkrain/templates/search.html
@@ -16,6 +16,9 @@
             {{ form.as_table }}
           </div>
           <button type="submit" class="btn btn-primary mt-3">Search</button>
+          <i class="fas fa-info-circle" style="color: #004D95; margin-left: 10px;" data-bs-toggle="tooltip" data-bs-html="true" 
+              title="Si vous ne mettez pas de dates, la maison sera reserver pour tout ca periode, de même si vous indiquez uniquement une date de début, la maison sera reservé de votre date du début jusqu'à la date de fin de la maison.">
+            Infos</i>
         </form>
       </div>
 
