--- a/PlaceToUkrain/templates/homepage.html
+++ b/PlaceToUkrain/templates/homepage.html
@@ -14,6 +14,7 @@
         <a href="{% url 'index' %}" class="btn btn-primary">Index</a>
         <a href="{% url 'logout' %}" class="btn btn-danger ml-2">Deconnexion</a>
       {% endif %}
+      <a href="{% url 'statistics' %}" class="btn btn-warning">Statistiques</a>
     </div>
   </div>
 {% endblock %}
